feat: introduce AgentConfig for parsing agent arguments
- Added AgentConfig class to handle agent argument parsing, including options for verbosity, HTML generation, output directory, output suffix, and minimum scopes.
- Implemented logging for malformed values and unknown keys.
- Updated ScopeTracerAgent to utilize AgentConfig for configuration management.

feat: implement AgentLog for agent diagnostics

- Created AgentLog class for logging messages prefixed with [scope-tracer].
- Implemented logging levels: info, warn, and debug, with appropriate output to System.err.

refactor: enhance ScopeTracerAgent with new configuration options

- Refactored ScopeTracerAgent to use AgentConfig for managing agent arguments.
- Updated HTML report generation logic to respect output directory and suffix configurations.
- Added checks for minimum scopes before generating HTML reports.

test: add unit tests for AgentConfig

- Created AgentConfigTest to validate parsing of various agent argument scenarios, including defaults, output directory, suffix, and minimum scopes.

test: enhance integration tests for ScopeTracerAgent

- Updated ScopeTracerAgentIT to test new agent argument features, including output directory and minimum scopes.

feat: add JSON export functionality to HTML reports

- Implemented JSON serialization of TraceModel for embedding in HTML reports.
- Added "Export JSON" button to HTML output for downloading trace data.

fix: improve error handling in AnalyzerMain

- Enhanced error handling in AnalyzerMain to provide clearer exit codes and messages for various failure scenarios.
- Updated usage instructions for the analyzer CLI.

test: add tests for AnalyzerMain and JSON serialization

- Created AnalyzerMainTest to validate command-line argument handling and error conditions.
- Added TraceModelJsonTest to ensure correct JSON serialization of trace models.